# ADS_Project1

./: CMakeLists.txt  README.md  Readme_mainCurveHypercube.md  Readme_mainCurveLsh.md  Readme_mainHypercube.md  Readme_mainProjectionHypercube.md  Readme_mainProjectionLsh.md  Readme_mainlsh.md  makefile
inc/: CurveGridHT.h  CurvesLSH.h  ExactKNeighbors.h  FunctionH.h  Hypercube.h  Hypercube_HT.h  KNeighborsClassifier.h  LSH.h  LSH_HT.h  PathFinder.h  Point.h  Projection.h  util.h  util.tar.xz  util2.h
inc/test_util/: ColorMod.h  Hypercube.h.bck  Point.cpp  util.h
src/: FunctionH.cpp  KNeighborsClassifier.cpp  LSH_HT.cpp  Pathfinder.cpp  Point.cpp  TODOs.txt  mainCurveHypercube.cpp  mainCurveLSH.cpp  mainCurveLsh.cpp  mainCurveProjectionHypercube.cpp  mainCurveProjectionLsh.cpp  mainHypercube.cpp  mainLsh.cpp  util.cpp  util2.cpp
tests/sample_datasets/: trajectories_query_dataset
tests/sample_datasets/siftbig/: ENN_results.txt
